# robot-oberon

./: .gitignore  .gitmodules  install.sh  run  setup.sh
catkin_ws/launch/: default.launch
design/: adapter-dcdc.scad  adapter-dcdc.stl  adapter-i2c.scad  adapter-i2c.stl  adapter-imu.scad  adapter-imu.stl  adapter-ina219.scad  adapter-ina219.stl  adapter-jetson-nano.stl  adapter-lidar.scad  adapter-lidar.stl  adapter-motor-controller.stl  base-plate.scad  base-plate.stl  motorcontrolleradapter.scad  nanoadapter.scad  shell-bottom.scad  shell-top.scad  shell-top.stl
install/: .rosinstall  setup.sh
launch/: default.launch  neptune.launch
ros/avoidance/: CMakeLists.txt  package.xml
src/avoidance/: CMakeLists.txt
src/avoidance/include/avoidance/: AvoidanceActivity.hpp
src/avoidance/src/: AvoidanceActivity.cpp  avoidance_node.cpp
src/imu_bno055/: CMakeLists.txt
src/lidar_rplidar/: package.xml
src/monitor/: package.xml
src/motor_pololu_qik/: CMakeLists.txt
src/psutil/: CMakeLists.txt  package.xml
src/ros-imu/: CMakeLists.txt
src/ros-imu-bno055/: CMakeLists.txt
src/ros-imu-bno055/include/imu_bno055/: imu_bno055.hpp
src/ros-imu-bno055/nodes/: imu_node  watchdog.py
src/ros-imu-bno055/src/: hh  imu_bno055.cpp  imu_bno055_node.cpp
src/ros-monitor/: CMakeLists.txt
src/ros-motion/: CMakeLists.txt
src/ros-motor-pololu-qik/: CMakeLists.txt  package.xml
src/ros-remote/: CMakeLists.txt
stm32/: motor_controller.ino
system/: install.sh  setup
system/install-nano/: install-pytorch.sh  install-ros.sh
tools/: find-poles
(+61 files in other folders)
